tests/lean/bad_error4.lean.expected.out
bad_error4.lean:5:7: error: type mismatch at field 'f'
  λ (a : unit) (b : delayed[?m_1]), delayed[?m_3]
has type
  Π (a : unit) (b : delayed[?m_1]), delayed[?m_2]
but is expected to have type
  unit → unit
